docker works! or_rviz does not work yet

--- a/.devcontainer/Dockerfile.openrave
+++ b/.devcontainer/Dockerfile.openrave
@@ -1,4 +1,6 @@
 ARG from
+ARG OPENRAVE_BUILD_TYPE=Release
+ARG ROS_BUILD_TYPE=Release
 
 FROM ${from} as builder
 #ENV SCCACHE_REDIS=${SCCACHE_REDIS}
@@ -9,21 +11,21 @@ RUN apt update && apt -y install checkinstall
 FROM builder as openrave_builder
 COPY openrave openrave
 # Install OpenRAVE
-RUN --mount=type=cache,target=/root/.cache/sccache cd openrave && mkdir build && cd build \
-  	&& BOOST_ROOT=/usr/local cmake -DODE_USE_MULTITHREAD=ON -DCMAKE_CXX_STANDARD=11 -DOSG_DIR=/usr/local/lib64/ -DCMAKE_BUILD_TYPE=Release -DBoost_NO_BOOST_CMAKE=ON -DBoost_NO_SYSTEM_PATHS=TRUE -DBOOST_ROOT=/usr/local/ -DFCL_USE_STATISTICS=ON -DCMAKE_C_COMPILER_LAUNCHER=sccache -DCMAKE_CXX_COMPILER_LAUNCHER=sccache ..\
+RUN --mount=type=cache,target=/root/.cache/sccache/ cd openrave && mkdir build && cd build \
+  	&& BOOST_ROOT=/usr/local cmake -DODE_USE_MULTITHREAD=ON -DCMAKE_CXX_STANDARD=11 -DOSG_DIR=/usr/local/lib64/ -DCMAKE_BUILD_TYPE=${OPENRAVE_BUILD_TYPE} -DBoost_NO_BOOST_CMAKE=ON -DBoost_NO_SYSTEM_PATHS=TRUE -DBOOST_ROOT=/usr/local/ -DFCL_USE_STATISTICS=ON -DCMAKE_C_COMPILER_LAUNCHER=sccache -DCMAKE_CXX_COMPILER_LAUNCHER=sccache ..\
 	&& make -j `nproc` \
-	&& checkinstall --install=no --default\
-	&& cp *deb /tmp/
-
-	#&& make install 
-
-FROM builder as main
-COPY --from=openrave_builder /tmp/*deb /tmp
-RUN dpkg -i /tmp/*deb && rm /tmp/*deb
+	&& make install 
+# # uncomment the following lines when you omit openrave/build directory from this layer
+# 	&& checkinstall --install=no --default\
+# 	&& cp *deb /tmp/
+# 
+# FROM builder as main
+# COPY --from=openrave_builder /tmp/*deb /tmp
+# RUN dpkg -i /tmp/*deb && rm /tmp/*deb
 COPY catkin_ws catkin_ws/src/
-RUN --mount=type=cache,target=/root/.cache/sccache cd catkin_ws \
+RUN --mount=type=cache,target=/root/.cache/sccache/ cd catkin_ws \
 	&& . /root/ros_catkin_ws/parent/install_isolated/setup.sh \
-	&& BOOST_ROOT=/usr/local catkin build --verbose --no-status -DCMAKE_BUILD_TYPE=RelWithDebInfo -DBoost_NO_BOOST_CMAKE=ON -DBoost_NO_SYSTEM_PATHS=TRUE -DBOOST_ROOT=/usr/local/ -DCMAKE_C_COMPILER_LAUNCHER=sccache -DCMAKE_CXX_COMPILER_LAUNCHER=sccache 
+	&& BOOST_ROOT=/usr/local catkin build --verbose --no-status -DCMAKE_BUILD_TYPE=${ROS_BUILD_TYPE} -DBoost_NO_BOOST_CMAKE=ON -DBoost_NO_SYSTEM_PATHS=TRUE -DBOOST_ROOT=/usr/local/ -DCMAKE_C_COMPILER_LAUNCHER=sccache -DCMAKE_CXX_COMPILER_LAUNCHER=sccache 
 
 # FROM ${from}
 # COPY --from=openrave_builder /tmp/*deb /tmp
