--- a/.devcontainer/Dockerfile.openrave-deps
+++ b/.devcontainer/Dockerfile.openrave-deps
@@ -73,7 +73,7 @@ RUN pip install --upgrade --user sympy==0.7.1
 
 
 # Install libtorch
-RUN mkdir -p ~/3rdparty \
+RUN mkdir -p ~/3rdparty && cd ~/3rdparty \
 	&& wget https://download.pytorch.org/libtorch/cu110/libtorch-cxx11-abi-shared-with-deps-1.7.1%2Bcu110.zip \
 	&& unzip libtorch-cxx11-abi-shared-with-deps-1.7.1+cu110.zip \
 	&& rm libtorch-cxx11-abi-shared-with-deps-1.7.1+cu110.zip
